syntax = "proto3";

package security;

option go_package = "github.com/stratifyr/security-service/internal/handlers/grpc";

message Security {
  int32 id = 1;
  string isin = 2;
  string symbol = 3;
  string industry = 4;
  string name = 5;
  string image = 6;
  double ltp = 7;
  double previous_close = 8;
  int32 tier = 9;
  string created_at = 10;
  string updated_at = 11;
  MarketData market_data = 12;
}

message MarketData {
  string date = 1;
  double open = 2;
  double close = 3;
  double high = 4;
  double low = 5;
  int32 volume = 6;
  repeated Metric metrics = 7;
}

message Metric {
  int32 id = 1;
  string name = 2;
  string type = 3;
  int32 period = 4;
  string indicator = 5;
  int32 tier = 6;
  double value = 7;
  double normalized_value = 8;
}

message SecurityIndexRequest {
  int32 userId = 1;
  repeated int32 ids = 2;
  string isin = 3;
  string symbol = 4;
}

message SecurityIndexResponse {
  repeated Security securities = 1;
  int32 total = 2;
}

service SecurityService {
  rpc Index(SecurityIndexRequest) returns (SecurityIndexResponse);
}
